refactorizando todo